...
                      <ButtonLabel style={styles.actionButtonLabel}>{t('rooms.create')}</ButtonLabel>
                    </TouchableOpacity>
                    <TouchableOpacity testID={isSecondEdition ? 'join-2e-room-button' : 'screenshot-open-room-join'} style={styles.actionButton} onPress={() => setJoinRoomModalVisible(true)}>
                      <ButtonLabel style={styles.actionButtonLabel}>{t('rooms.join')}</ButtonLabel>
                    </TouchableOpacity>
                  </View>
                  <TouchableOpacity accessibilityRole="button" testID={isSecondEdition ? 'open-2e-rules' : 'open-munchkin-rules'} style={[styles.actionButton, styles.rulesButton]} onPress={() => router.navigate(isSecondEdition ? '/munchkin/rules?edition=2e' : '/munchkin/rules')}>
                    <ButtonLabel style={styles.actionButtonLabel}>{t('rooms.rules')}</ButtonLabel>
                  </TouchableOpacity>
                </View>
              </View>;
            })}
          </View>
...
